<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.authentication.presentation.screens.LoginFragment">

   <androidx.core.widget.NestedScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
     >

      <androidx.constraintlayout.widget.ConstraintLayout
          android:id="@+id/layout"
          android:layout_width="match_parent"
          android:layout_height="match_parent">


         <ImageView
             android:id="@+id/login_image"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/login_bg"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />

         <TextView
             style="@style/NormalBoldText"
             android:layout_marginLeft="@dimen/margin_32dp"
             android:layout_marginBottom="@dimen/margin_46dp"
             android:fontFamily="@font/poppins_medium"
             android:text="@string/track_your_fitness"
             android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/login_image"
             app:layout_constraintStart_toStartOf="parent" />

         <TextView
             android:id="@+id/login_tv"
             style="@style/NormalBoldText"
             android:layout_marginLeft="@dimen/margin_32dp"
             android:layout_marginTop="@dimen/margin_16dp"
             android:fontFamily="@font/poppins_medium"
             android:text="@string/sign_in"
             android:textColor="@color/black"
             android:textSize="24sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_image" />

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/email_textInputLayout"
             style="@style/TextInputStyle"
             android:layout_marginHorizontal="@dimen/margin_32dp"
             android:layout_marginTop="@dimen/margin_32dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/login_tv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_email_ET"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:fontFamily="@font/poppins"
                android:hint="Email address"
                android:inputType="textEmailAddress"
                android:paddingVertical="10dp"
                android:textColorHint="@color/gray"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/password_textInputLayout"
             style="@style/TextInputStyle"
             android:layout_marginHorizontal="@dimen/margin_32dp"
             android:layout_marginTop="@dimen/margin_32dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_textInputLayout"
             app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fragment_login_password_ET"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingVertical="10dp"
                android:textColorHint="@color/gray"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

         </com.google.android.material.textfield.TextInputLayout>

         <com.google.android.material.button.MaterialButton
             android:id="@+id/fragment_login_login_btn"
             style="@style/ButtonStyle"
             android:layout_marginHorizontal="@dimen/margin_32dp"
             android:layout_marginVertical="@dimen/margin_32dp"
             android:fontFamily="@font/ubuntu_medium"
             android:paddingVertical="10dp"
             android:text="Sign In"
             android:textColor="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/password_textInputLayout" />

         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/social_signIn_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragment_login_login_btn">

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginHorizontal="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/FaintText"
                android:layout_marginTop="23dp"
                android:background="@color/white"
                android:paddingHorizontal="@dimen/margin_15dp"
                android:text="Or sign in with"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/google_login"
                style="@style/LoginImageButtonStyle"
                android:layout_marginStart="35dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:src="@drawable/ic_google"
                app:layout_constraintStart_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/facebook_login"
                style="@style/LoginImageButtonStyle"
                android:layout_marginTop="@dimen/margin_32dp"
                android:src="@drawable/ic_facebook"
                app:layout_constraintEnd_toStartOf="@+id/apple_login"
                app:layout_constraintStart_toEndOf="@+id/google_login"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ImageButton
                android:id="@+id/apple_login"
                style="@style/LoginImageButtonStyle"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginEnd="35dp"
                android:src="@drawable/ic_apple"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />
         </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/don_t_have_an_account_TV"
                style="@style/NormalBoldText"
                android:layout_marginStart="45dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:text="@string/don_t_have_an_account"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_login_btn" />

            <TextView
                android:id="@+id/sign_up_tv"
                style="@style/NormalBoldText"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginBottom="45dp"
                android:text="Sign up"
                android:textColor="@color/orange"
                android:textSize="@dimen/text_size_16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/don_t_have_an_account_TV"
                app:layout_constraintTop_toBottomOf="@+id/fragment_login_login_btn" />

      </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>