<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".common.authentication.presentation.screens.SignUpFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="-38dp"
                android:background="@drawable/signup_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/NormalBoldText"
                android:layout_marginLeft="@dimen/margin_32dp"
                android:layout_marginBottom="@dimen/margin_46dp"
                android:text="@string/create_a_nfitness_nutrition_plan"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView"
                style="@style/NormalBoldText"
                android:layout_marginLeft="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:text="@string/sign_up"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_textInputLayout"
                style="@style/TextInputStyle"
                android:layout_marginHorizontal="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fullNameTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/full_name"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_textInputLayout"
                style="@style/TextInputStyle"
                android:layout_marginHorizontal="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNumberTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:paddingVertical="10dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_address_textInputLayout"
                style="@style/TextInputStyle"
                android:layout_marginHorizontal="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_textInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/email_address"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/wrongEmailWorning_Tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/wrong_email_address"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:visibility="invisible"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_address_textInputLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_signup_textInputLayout"
                style="@style/TextInputStyle"
                android:layout_marginHorizontal="@dimen/margin_32dp"
                android:layout_marginTop="@dimen/margin_32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/email_address_textInputLayout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextInput"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sign_up_button"
                style="@style/ButtonStyle"
                android:layout_marginHorizontal="@dimen/margin_32dp"
                android:layout_marginVertical="@dimen/margin_32dp"
                android:paddingVertical="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_signup_textInputLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/social_signUp_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_up_button">

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="@dimen/margin_32dp"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:background="@color/gray"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView2"
                    style="@style/FaintText"
                    android:layout_marginTop="23dp"
                    android:background="@color/white"
                    android:paddingHorizontal="@dimen/margin_15dp"
                    android:text="@string/or_sign_up_with"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/google_login"
                    style="@style/LoginImageButtonStyle"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:src="@drawable/ic_google"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/facebook_login"
                    style="@style/LoginImageButtonStyle"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:src="@drawable/ic_facebook"
                    app:layout_constraintEnd_toStartOf="@+id/apple_login"
                    app:layout_constraintStart_toEndOf="@+id/google_login"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <ImageButton
                    android:id="@+id/apple_login"
                    style="@style/LoginImageButtonStyle"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:layout_marginEnd="@dimen/margin_32dp"
                    android:src="@drawable/ic_apple"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/don_t_have_an_account_TV"
                    style="@style/NormalBoldText"
                    android:layout_marginStart="45dp"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:text="Already have an account?"
                    android:textSize="@dimen/text_size_16sp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

                <TextView
                    android:id="@+id/sign_in_tv"
                    style="@style/NormalBoldText"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:layout_marginBottom="45dp"
                    android:text="Sign In"
                    android:textColor="@color/orange"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/don_t_have_an_account_TV"
                    app:layout_constraintTop_toBottomOf="@+id/sign_up_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>